[gd_scene load_steps=9 format=3 uid="uid://bglswyt7apam2"]

[ext_resource type="Script" uid="uid://bpakfkdc34mwi" path="res://TheHostage/STAGE2/Puzzle/Piano/main.gd" id="1_gxuey"]
[ext_resource type="Texture2D" uid="uid://dpg4tt0rj78e2" path="res://assets/The Hostage - main game/STAGE2/minigame/Piano/Illustration.png" id="1_k26ff"]
[ext_resource type="PackedScene" uid="uid://defm74foxh1ps" path="res://TheHostage/STAGE2/Puzzle/Piano/black/black1.tscn" id="2_v8j0b"]
[ext_resource type="PackedScene" uid="uid://cvq2ikpxy1aaj" path="res://TheHostage/STAGE2/Puzzle/Piano/white/white1.tscn" id="3_4folb"]
[ext_resource type="PackedScene" uid="uid://nxd473444gs2" path="res://TheHostage/STAGE2/Puzzle/Piano/white/white2.tscn" id="4_gxuey"]
[ext_resource type="PackedScene" uid="uid://h0x6qp0eevva" path="res://TheHostage/STAGE2/Puzzle/Piano/white/white3.tscn" id="5_bhs16"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gxuey"]
size = Vector2(18, 203)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4folb"]
size = Vector2(36.75, 202.25)

[node name="Main" type="Node2D"]
script = ExtResource("1_gxuey")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_k26ff")

[node name="Node_black" type="Node2D" parent="."]

[node name="Black1" parent="Node_black" instance=ExtResource("2_v8j0b")]
position = Vector2(248, 171)
scale = Vector2(0.96943, 1.00461)

[node name="Black2" parent="Node_black" instance=ExtResource("2_v8j0b")]
position = Vector2(300, 171)
scale = Vector2(0.96943, 1.00461)

[node name="Black3" parent="Node_black" instance=ExtResource("2_v8j0b")]
position = Vector2(351, 171)
scale = Vector2(0.96943, 1.00461)

[node name="Black4" parent="Node_black" instance=ExtResource("2_v8j0b")]
position = Vector2(454, 171)
scale = Vector2(0.96943, 1.00461)

[node name="Black5" parent="Node_black" instance=ExtResource("2_v8j0b")]
position = Vector2(505, 171)
scale = Vector2(0.96943, 1.00461)

[node name="Black6" parent="Node_black" instance=ExtResource("2_v8j0b")]
position = Vector2(608, 171)
scale = Vector2(0.96943, 1.00461)

[node name="Black7" parent="Node_black" instance=ExtResource("2_v8j0b")]
position = Vector2(660, 171)
scale = Vector2(0.96943, 1.00461)

[node name="Black8" parent="Node_black" instance=ExtResource("2_v8j0b")]
position = Vector2(711, 171)
scale = Vector2(0.96943, 1.00461)

[node name="Black9" parent="Node_black" instance=ExtResource("2_v8j0b")]
position = Vector2(814, 171)
scale = Vector2(0.96943, 1.00461)

[node name="Black10" parent="Node_black" instance=ExtResource("2_v8j0b")]
position = Vector2(865, 171)
scale = Vector2(0.96943, 1.00461)

[node name="Black11" parent="Node_black" instance=ExtResource("2_v8j0b")]
position = Vector2(164, 171)
scale = Vector2(0.458883, 1.00946)

[node name="Black12" parent="Node_black" instance=ExtResource("2_v8j0b")]
position = Vector2(970, 170)
scale = Vector2(0.458883, 1.00946)

[node name="Node_white" type="Node2D" parent="."]

[node name="White1" parent="Node_white" instance=ExtResource("3_4folb")]
position = Vector2(167, 170)
scale = Vector2(1.03808, 1.00144)

[node name="White2" parent="Node_white" instance=ExtResource("4_gxuey")]
position = Vector2(218, 168)
scale = Vector2(1.05729, 0.988681)

[node name="White3" parent="Node_white" instance=ExtResource("5_bhs16")]
position = Vector2(270, 169)
scale = Vector2(1.02838, 1.00132)

[node name="White4" parent="Node_white" instance=ExtResource("5_bhs16")]
position = Vector2(322, 169)
scale = Vector2(1.02838, 1.00132)

[node name="White5" parent="Node_white" instance=ExtResource("3_4folb")]
position = Vector2(372, 169)
scale = Vector2(1.03808, 1.00144)

[node name="White6" parent="Node_white" instance=ExtResource("4_gxuey")]
position = Vector2(422, 169)
scale = Vector2(1.05729, 0.988681)

[node name="White7" parent="Node_white" instance=ExtResource("5_bhs16")]
position = Vector2(476, 169)
scale = Vector2(1.02838, 1.00132)

[node name="White8" parent="Node_white" instance=ExtResource("3_4folb")]
position = Vector2(527, 169)
scale = Vector2(1.03808, 1.00144)

[node name="White9" parent="Node_white" instance=ExtResource("3_4folb")]
position = Vector2(732, 168)
scale = Vector2(1.03808, 1.00144)

[node name="White10" parent="Node_white" instance=ExtResource("4_gxuey")]
position = Vector2(578, 167)
scale = Vector2(1.05729, 0.988681)

[node name="White11" parent="Node_white" instance=ExtResource("4_gxuey")]
position = Vector2(782, 168)
scale = Vector2(1.05729, 0.988681)

[node name="White12" parent="Node_white" instance=ExtResource("5_bhs16")]
position = Vector2(630, 168)
scale = Vector2(1.02838, 1.00132)

[node name="White13" parent="Node_white" instance=ExtResource("5_bhs16")]
position = Vector2(836, 168)
scale = Vector2(1.02838, 1.00132)

[node name="White14" parent="Node_white" instance=ExtResource("5_bhs16")]
position = Vector2(682, 168)
scale = Vector2(1.02838, 1.00132)

[node name="White15" parent="Node_white" instance=ExtResource("3_4folb")]
position = Vector2(887, 169)
scale = Vector2(1.03808, 1.00144)

[node name="White16" parent="Node_white" instance=ExtResource("4_gxuey")]
position = Vector2(938, 167)
scale = Vector2(1.05729, 0.988681)

[node name="area_black" type="Node2D" parent="."]
visible = false

[node name="black1" type="Area2D" parent="area_black"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_black/black1"]
position = Vector2(173, 272.5)
shape = SubResource("RectangleShape2D_gxuey")

[node name="black2" type="Area2D" parent="area_black"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_black/black2"]
position = Vector2(267.5, 272)
shape = SubResource("RectangleShape2D_4folb")

[node name="black3" type="Area2D" parent="area_black"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_black/black3"]
position = Vector2(319, 272)
shape = SubResource("RectangleShape2D_4folb")

[node name="black4" type="Area2D" parent="area_black"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_black/black4"]
position = Vector2(370, 272)
shape = SubResource("RectangleShape2D_4folb")

[node name="black5" type="Area2D" parent="area_black"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_black/black5"]
position = Vector2(473, 272)
shape = SubResource("RectangleShape2D_4folb")

[node name="black6" type="Area2D" parent="area_black"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_black/black6"]
position = Vector2(525, 273)
shape = SubResource("RectangleShape2D_4folb")

[node name="black7" type="Area2D" parent="area_black"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_black/black7"]
position = Vector2(627, 272)
shape = SubResource("RectangleShape2D_4folb")

[node name="black8" type="Area2D" parent="area_black"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_black/black8"]
position = Vector2(679.25, 272.25)
shape = SubResource("RectangleShape2D_4folb")

[node name="black9" type="Area2D" parent="area_black"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_black/black9"]
position = Vector2(730.375, 272.125)
shape = SubResource("RectangleShape2D_4folb")

[node name="black10" type="Area2D" parent="area_black"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_black/black10"]
position = Vector2(834, 273)
shape = SubResource("RectangleShape2D_4folb")

[node name="black11" type="Area2D" parent="area_black"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_black/black11"]
position = Vector2(885, 272)
shape = SubResource("RectangleShape2D_4folb")

[node name="black12" type="Area2D" parent="area_black"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_black/black12"]
position = Vector2(979, 272)
shape = SubResource("RectangleShape2D_gxuey")

[node name="area_white" type="Node2D" parent="."]
visible = false

[node name="1" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/1"]
position = Vector2(168, 168)
scale = Vector2(0.908654, 1)
polygon = PackedVector2Array(-1.10054, 206, 15.4074, 206, 15.4074, 2, 50.6243, 3, 50.6243, 388, -2.20107, 388)

[node name="2" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/2"]
position = Vector2(219, 166)
polygon = PackedVector2Array(0, 5, 30, 5, 30, 207, 46, 207, 46, 390, 0, 390)

[node name="3" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/3"]
position = Vector2(270, 165)
polygon = PackedVector2Array(15, 3, 31, 3, 31, 207, 46, 207, 46, 391, 0, 391, 0, 207, 15, 207)

[node name="4" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/4"]
position = Vector2(322, 166)
polygon = PackedVector2Array(15, 3, 31, 3, 31, 207, 46, 207, 46, 391, 0, 391, 0, 207, 15, 207)

[node name="5" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/5"]
position = Vector2(374, 167)
scale = Vector2(0.908654, 1)
polygon = PackedVector2Array(-1.10054, 206, 15.4074, 206, 15.4074, 2, 49.9915, 2.00001, 50.6243, 388, -2.20107, 388)

[node name="6" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/6"]
position = Vector2(424, 167)
polygon = PackedVector2Array(0, 5, 30, 5, 30, 207, 46, 207, 46, 390, 0, 390)

[node name="7" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/7"]
position = Vector2(476, 167)
polygon = PackedVector2Array(15, 3, 31, 3, 31, 207, 46, 207, 46, 391, 0, 391, 0, 207, 15, 207)

[node name="8" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/8"]
position = Vector2(528, 168)
scale = Vector2(0.908654, 1)
polygon = PackedVector2Array(-1.10054, 206, 15.4074, 206, 15.4074, 2, 49.9915, 2.00001, 50.6243, 388, -2.20107, 388)

[node name="9" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/9"]
position = Vector2(579, 166)
polygon = PackedVector2Array(0, 5, 30, 5, 30, 207, 46, 207, 46, 390, 0, 390)

[node name="10" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/10"]
position = Vector2(630, 166)
polygon = PackedVector2Array(15, 3, 31, 3, 31, 207, 46, 207, 46, 391, 0, 391, 0, 207, 15, 207)

[node name="11" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/11"]
position = Vector2(682, 166)
polygon = PackedVector2Array(15, 3, 31, 3, 31, 207, 46, 207, 46, 391, 0, 391, 0, 207, 15, 207)

[node name="12" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/12"]
position = Vector2(735, 168)
scale = Vector2(0.908654, 1)
polygon = PackedVector2Array(-2.20105, 205, 15.4074, 205, 15.4074, 2, 49.9915, 2.00001, 50.5468, 340.712, 50.6243, 388, -2.20107, 388)

[node name="13" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/13"]
position = Vector2(784, 166)
polygon = PackedVector2Array(0, 5, 31, 5, 32, 208, 47, 208, 47, 390, 0, 390)

[node name="14" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/14"]
position = Vector2(836, 167)
polygon = PackedVector2Array(15, 3, 31, 3, 31, 207, 46, 207, 46, 391, 0, 391, 0, 207, 15, 207)

[node name="15" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/15"]
position = Vector2(888, 168)
scale = Vector2(0.908654, 1)
polygon = PackedVector2Array(-1.10054, 206, 15.4074, 206, 15.4074, 2, 49.9915, 2.00001, 50.6243, 388, -2.20107, 388)

[node name="16" type="Area2D" parent="area_white"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_white/16"]
position = Vector2(939, 166)
polygon = PackedVector2Array(0, 5, 31, 5, 32, 208, 47, 208, 47, 390, 0, 390)

[node name="sound_black" type="Node2D" parent="."]

[node name="1" type="AudioStreamPlayer2D" parent="sound_black"]

[node name="2" type="AudioStreamPlayer2D" parent="sound_black"]

[node name="3" type="AudioStreamPlayer2D" parent="sound_black"]

[node name="4" type="AudioStreamPlayer2D" parent="sound_black"]

[node name="5" type="AudioStreamPlayer2D" parent="sound_black"]

[node name="6" type="AudioStreamPlayer2D" parent="sound_black"]

[node name="7" type="AudioStreamPlayer2D" parent="sound_black"]

[node name="8" type="AudioStreamPlayer2D" parent="sound_black"]

[node name="9" type="AudioStreamPlayer2D" parent="sound_black"]

[node name="10" type="AudioStreamPlayer2D" parent="sound_black"]

[node name="11" type="AudioStreamPlayer2D" parent="sound_black"]

[node name="12" type="AudioStreamPlayer2D" parent="sound_black"]

[node name="sound_white" type="Node2D" parent="."]

[node name="1" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="2" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="3" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="4" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="5" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="6" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="7" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="8" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="9" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="10" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="11" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="12" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="13" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="14" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="15" type="AudioStreamPlayer2D" parent="sound_white"]

[node name="16" type="AudioStreamPlayer2D" parent="sound_white"]

[connection signal="input_event" from="Node_black/Black1/area" to="." method="_on_black1_input_event"]
[connection signal="input_event" from="Node_black/Black2/area" to="." method="_on_black2_input_event"]
[connection signal="input_event" from="Node_black/Black3/area" to="." method="_on_black3_input_event"]
[connection signal="input_event" from="Node_black/Black4/area" to="." method="_on_black4_input_event"]
[connection signal="input_event" from="Node_black/Black5/area" to="." method="_on_black5_input_event"]
[connection signal="input_event" from="Node_black/Black6/area" to="." method="_on_black6_input_event"]
[connection signal="input_event" from="Node_black/Black7/area" to="." method="_on_black7_input_event"]
[connection signal="input_event" from="Node_black/Black8/area" to="." method="_on_black8_input_event"]
[connection signal="input_event" from="Node_black/Black9/area" to="." method="_on_black9_input_event"]
[connection signal="input_event" from="Node_black/Black10/area" to="." method="_on_black10_input_event"]
[connection signal="input_event" from="Node_black/Black11/area" to="." method="_on_black11_input_event"]
[connection signal="input_event" from="Node_black/Black12/area" to="." method="_on_black12_input_event"]
[connection signal="input_event" from="Node_white/White1/area" to="." method="_on_white1_input_event"]
[connection signal="input_event" from="Node_white/White2/area" to="." method="_on_white2_input_event"]
[connection signal="input_event" from="Node_white/White3/area" to="." method="_on_white3_input_event"]
[connection signal="input_event" from="Node_white/White4/area" to="." method="_on_white4_input_event"]
[connection signal="input_event" from="Node_white/White5/area" to="." method="_on_white5_input_event"]
[connection signal="input_event" from="Node_white/White6/area" to="." method="_on_white6_input_event"]
[connection signal="input_event" from="Node_white/White7/area" to="." method="_on_area_input_event"]
[connection signal="input_event" from="Node_white/White8/area" to="." method="_on_white8_input_event"]
[connection signal="input_event" from="Node_white/White9/area" to="." method="_on_white9_input_event"]
[connection signal="input_event" from="Node_white/White10/area" to="." method="_on_white10_input_event"]
[connection signal="input_event" from="Node_white/White11/area" to="." method="_on_white11_input_event"]
[connection signal="input_event" from="Node_white/White12/area" to="." method="_on_white12_input_event"]
[connection signal="input_event" from="Node_white/White13/area" to="." method="_on_white13_input_event"]
[connection signal="input_event" from="Node_white/White14/area" to="." method="_on_white14_input_event"]
[connection signal="input_event" from="Node_white/White15/area" to="." method="_on_white15_input_event"]
[connection signal="input_event" from="Node_white/White16/area" to="." method="_on_white16_input_event"]

[editable path="Node_black/Black1"]
[editable path="Node_black/Black2"]
[editable path="Node_black/Black3"]
[editable path="Node_black/Black4"]
[editable path="Node_black/Black5"]
[editable path="Node_black/Black6"]
[editable path="Node_black/Black7"]
[editable path="Node_black/Black8"]
[editable path="Node_black/Black9"]
[editable path="Node_black/Black10"]
[editable path="Node_black/Black11"]
[editable path="Node_black/Black12"]
[editable path="Node_white/White1"]
[editable path="Node_white/White2"]
[editable path="Node_white/White3"]
[editable path="Node_white/White4"]
[editable path="Node_white/White5"]
[editable path="Node_white/White6"]
[editable path="Node_white/White7"]
[editable path="Node_white/White8"]
[editable path="Node_white/White9"]
[editable path="Node_white/White10"]
[editable path="Node_white/White11"]
[editable path="Node_white/White12"]
[editable path="Node_white/White13"]
[editable path="Node_white/White14"]
[editable path="Node_white/White15"]
[editable path="Node_white/White16"]
